added colors and reset

--- a/demo/index.html
+++ b/demo/index.html
@@ -28,6 +28,8 @@
         <option value="sampleGraph">Sample Graph</option>
     </select>
     <button onclick="runLayout()">Run Layout</button>
+    <button onclick="addNodesToHeirarchy()">Add Nodes To Heirarchy</button>
+    <button onclick="reset()">Reset</button>
     <div hidden class="accordion-item">
         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
