isDirected property undefined check

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,6 +29,7 @@
     </select>
     <button onclick="runLayout()">Run Layout</button>
     <button onclick="addNodesToHeirarchy()">Add Nodes To Heirarchy</button>
+    <button onclick="rerun()">ReRun</button>
     <button onclick="reset()">Reset</button>
     <div hidden class="accordion-item">
         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
