--- a/demo/index.html
+++ b/demo/index.html
@@ -34,6 +34,7 @@
       <input type="file" id="fileInput" accept=".graphml" hidden>
       <button onclick="loadGraph()">Load Graph From File</button>
       <button onclick="rerun()">Re-Layout</button>
+      <button onclick="deleteSelected()">Delete Selected</button>
     </div>
     <!-- <button onclick="reset()">Reset</button> -->
     <div hidden class="accordion-item">
