added nodes with non uniform size #6

--- a/demo/index.html
+++ b/demo/index.html
@@ -181,7 +181,7 @@
                 <label class="form-label" for="uniformNodeDimensions">uniformNodeDimensions</label>
               </td>
               <td>
-                <input class="form-check-input" type="checkbox" id="uniformNodeDimensions" checked>
+                <input class="form-check-input" type="checkbox" id="uniformNodeDimensions">
               </td>
             </tr>
             <tr>
@@ -218,7 +218,7 @@
             </tr>
             <tr>
               <td><label class="form-label" for="nodeRepulsion"> nodeRepulsion </label></td>
-              <td><input type="number" class="form-control form-control-sm" id="nodeRepulsion" value="500"></td>
+              <td><input type="number" class="form-control form-control-sm" id="nodeRepulsion" value="4500"></td>
             </tr>
             <tr>
               <td><label class="form-label" for="swapForceLimit"> swapForceLimit </label></td>
@@ -246,7 +246,7 @@
             </tr>
             <tr>
               <td><label class="form-label" for="maxNodeDisplacement"> maxNodeDisplacement </label></td>
-              <td><input type="number" class="form-control form-control-sm" id="maxNodeDisplacement" value="50">
+              <td><input type="number" class="form-control form-control-sm" id="maxNodeDisplacement" value="60">
               </td>
             </tr>
             <tr>
