assign random width and height + style fetched from a function

--- a/demo/index.html
+++ b/demo/index.html
@@ -56,6 +56,8 @@
 
       <button title="Run Cose" onclick="runCose()">CoSE</button>
       <button title="Run Cose Animated" onclick="runCoseAnimated()">CoSE Animated</button>
+
+      <button title="Assign Random Width and Height to Nodes" onclick="assignRandomWidthAndHeight()">Randomize Width and Height</button>
       
       
     </div>
