post processing check box

--- a/demo/index.html
+++ b/demo/index.html
@@ -41,6 +41,9 @@
       
       <button title="Add Selected To Heirarchy and Re-Layout" onclick="addNodesToHeirarchy()">Add To Heirarchy</button>
       
+      <label class="form-label" for="performPostProcessing">Perform Post Processing</label>
+      <input class="form-check-input" type="checkbox" id="performPostProcessing" checked>
+
       <button title="Delete Selected Items" onclick="deleteSelected()">Delete Selected</button>
 
       <button title="Re-Layout" onclick="rerun()">HySE</button>
