updated compound node placement so that they dont overlap - added display initial position option

--- a/demo/index.html
+++ b/demo/index.html
@@ -58,6 +58,11 @@
           </div>
 
           <div class="row">
+            <label class="form-label" for="displayInitialPositions">Display Initial Positions</label>
+            <input class="form-check-input" type="checkbox" id="displayInitialPositions">
+          </div>
+
+          <div class="row">
             <button title="Delete Selected Items" onclick="deleteSelected()">Delete Selected</button>
           </div>
           
