--- a/demo/index.html
+++ b/demo/index.html
@@ -63,6 +63,11 @@
           </div>
 
           <div class="row">
+            <label class="form-label" for="randomizeInitialPositions">Randomize Initial Positions</label>
+            <input class="form-check-input" type="checkbox" id="randomizeInitialPositions" checked>
+          </div>
+
+          <div class="row">
             <button title="Delete Selected Items" onclick="deleteSelected()">Delete Selected</button>
           </div>
           
