set randomize width and height to 500

--- a/demo/index.html
+++ b/demo/index.html
@@ -105,6 +105,11 @@
             <button title="Run Cose" onclick="runCose()">CoSE</button>
             <button title="Run Cose Animated" onclick="runCoseAnimated()">CoSE Animated</button>
           </div>
+
+          <div class="row">
+            <label title="Max Width and Height Value" class="form-label" for="maxWH">Max Random Width/Height </label>
+            <input title="Max Width and Height Value" type="number" class="form-control form-control-sm" id="maxWH" value="500">
+          </div>
     
           <div class="row">
             <button title="Assign Random Width and Height to Nodes" onclick="assignRandomWidthAndHeight()">Randomize Width and Height</button>
