update cose-bilkent to fcose

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,7 @@
     <script src="https://unpkg.com/layout-base/layout-base.js"></script>
     <script src="https://unpkg.com/cose-base/cose-base.js"></script>
     <script src="./cytoscape-cose-bilkent.js"></script>
+    <script src="./cytoscape-fcose.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
     <script src="./cytoscape-context-menus.js"></script>
     <script src="./file-operations.js"> </script>
