--- a/demo/index.html
+++ b/demo/index.html
@@ -120,6 +120,8 @@
     
           <div class="row">
             <button title="Assign Random Width and Height to Nodes" onclick="assignRandomWidthAndHeight()">Randomize Width and Height</button>
+            <label class="form-label" for="uniformNodeDimensions">uniformNodeDimensions</label>
+            <input class="form-check-input" type="checkbox" id="uniformNodeDimensions">
           </div>
 
           <div class="row">
