test graph generation

--- a/demo/index.html
+++ b/demo/index.html
@@ -147,6 +147,10 @@
             <input title="Depth Of Undirected Parts" type="number" class="form-control form-control-sm" id="depthThreshold" value="2">
             <button onclick="createTestGraph()">Create Test Graph</button>
           </div>
+
+          <div>
+            <button onclick="createTestGraphFromTwoGraphs()">Create Test Graph 2</button>
+          </div>
           
         </div>
       </div>
