run experiment with directed graphs

--- a/demo/index.html
+++ b/demo/index.html
@@ -125,7 +125,7 @@
           </div>
 
           <div class="row">
-            <button title="Experiment" onclick="runExperiment()">Run Experiment</button>
+            <button title="Experiment" onclick="runExperiment2()">Run Experiment</button>
           </div>
 
           <div class="row">
@@ -144,7 +144,7 @@
 
           <div class="row">
             <label title="Depth Of Undirected Parts" class="form-label" for="depthThreshold">Depth</label>
-            <input title="Depth Of Undirected Parts" type="number" class="form-control form-control-sm" id="depthThreshold" value="5">
+            <input title="Depth Of Undirected Parts" type="number" class="form-control form-control-sm" id="depthThreshold" value="2">
           </div>
 
           <div class="row">
