relaxed springs and added dagre button

--- a/demo/index.html
+++ b/demo/index.html
@@ -113,6 +113,7 @@
           <div class="row">
             <button title="Run Cose" onclick="runCose()">CoSE</button>
             <button title="Run Cose Animated" onclick="runCoseAnimated()">CoSE Animated</button>
+            <button title="Run Dagre" onclick="runDagre()">Dagre</button>
           </div>
 
           <div class="row">
