--- a/demo/index.html
+++ b/demo/index.html
@@ -46,8 +46,8 @@
           </select>
           </div>
           <!--create a dropdown showing sample graphs-->
-          <button class="accordion">Save/Load</button>
-          <div class="panel">
+          <button class="accordion active">Save/Load</button>
+          <div class="panel" style="display: block;">
             <div class="row">
               <button title="Load and Layout Sample" onclick="runLayout()">Load Sample</button>
             
@@ -58,8 +58,8 @@
             </div>
           </div>
           
-          <button class="accordion">HySE</button>
-          <div class="panel">
+          <button class="accordion active">HySE</button>
+          <div class="panel" style="display: block;">
             <div class="row">
               <input class="form-check-input" type="checkbox" id="performPostProcessing" checked>
               <label class="form-label" for="performPostProcessing">Perform Post Processing</label>
