--- a/demo/index.html
+++ b/demo/index.html
@@ -27,6 +27,7 @@
     <script src="./cytoscape-layvo.js"></script>
     <script src="./test.js"></script>
     <script src="./unix.js"></script>
+    <script src="./callgraph.js"></script>
     <script src="./index.js"></script>
     
     
@@ -43,7 +44,7 @@
           <button hidden onclick="addNode()">Add Node</button>
           <div class="row">
             <select id="experimentGraphs">
-              <option value="sampleGraph">Unix Family Tree</option>
+              <option value="unix-family-tree">unix-family-tree</option>
           </select>
           </div>
           <!--create a dropdown showing sample graphs-->
@@ -298,7 +299,7 @@
                   <label class="form-label" for="nodeDimensionsIncludeLabels">nodeDimensionsIncludeLabels</label>
                 </td>
                 <td>
-                  <input class="form-check-input" type="checkbox" value="false" id="nodeDimensionsIncludeLabels">
+                  <input class="form-check-input" type="checkbox" value="false" id="nodeDimensionsIncludeLabels" checked>
                 </td>
               </tr>
             </tbody>
